---------------------------------------------------------------------------------------------------
Version: 0.0.1
Date: 2023-03-01
  Features:
    - Alpha release.
    - Adds gold, silver, platinum and palladium
    - Optionally adds catalysis recipes
    - Compatible with Krastorio 2
    - Compatible with Space Exploration
    - Compatible with Bob's Electronics
    - Compatible with deadlock stacking/crating
    - Compatible with many other mods